k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: echoserver
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8080
    name: web
  selector:
    app: echoserver
  type: NodePort
