k8s/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: gke-https-redirect
  annotations:
    kubernetes.io/ingress.global-static-ip-name: gke-https-redirect
    networking.gke.io/managed-certificates: gke-https-redirect
    networking.gke.io/v1beta1.FrontendConfig: gke-https-redirect
spec:
  backend:
    serviceName: echoserver
    servicePort: web
